--- a/style.css
+++ b/style.css
@@ -75,7 +75,68 @@ header{
 }
 
 main{
-    background-color: var(--bgwhite);
     margin-left: 12vw;
     margin-right: 12vw;
+}
+
+#nav{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 12px;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+}
+
+.nav1{
+    background-color: var(--bgwhite);
+    width: 18%;
+    height: 100%;
+    font-weight: 900;
+    color: var(--tx1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+}
+
+.nav2{
+    background-color: rgba(238, 238, 238, 0.30);
+    width: 15%;
+    height: 100%;
+    color: var(--tx2);
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+}
+
+.nav3{
+    background-color: rgba(238, 238, 238, 0.30);
+    width: 47%;
+    height: 100%;
+    color: var(--tx2);
+    font-weight: 900;
+    display: flex;
+    align-items: center;
+    padding: 12px;
+}
+
+.icons{
+    background-color: rgba(238, 238, 238, 0.30);
+    width: 20%;
+    height: 100%;
+    color: var(--tx2);
+    padding: 12px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.icons i{
+    width: 30px;
+    height: 30px;
 }
