--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ main{
 }
 
 .nav2{
-    background-color: rgba(238, 238, 238, 0.30);
+    background-color: rgba(238, 238, 238, 0.25);
     width: 15%;
     height: 100%;
     color: var(--tx2);
@@ -114,7 +114,7 @@ main{
 }
 
 .nav3{
-    background-color: rgba(238, 238, 238, 0.30);
+    background-color: rgba(238, 238, 238, 0.25);
     width: 47%;
     height: 100%;
     color: var(--tx2);
@@ -125,7 +125,7 @@ main{
 }
 
 .icons{
-    background-color: rgba(238, 238, 238, 0.30);
+    background-color: rgba(238, 238, 238, 0.25);
     width: 20%;
     height: 100%;
     color: var(--tx2);
@@ -139,4 +139,29 @@ main{
 .icons i{
     width: 30px;
     height: 30px;
+}
+
+#container{
+    width: 100%;
+    background-color: var(--bgwhite);
+}
+
+.date{
+    height: 150px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.date-d{
+    width: 15%;
+    color: var(--tx1);
+}
+
+.line{
+    width: 30%;
+    background-color: var(--bggrey);
+    height: 2px;
 }
