--- a/style.css
+++ b/style.css
@@ -165,3 +165,42 @@ main{
     background-color: var(--bggrey);
     height: 2px;
 }
+
+.head{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 150px;
+}
+
+.head h1{
+    font-size: var(--hed2-size);
+    text-align: center;
+    padding-left: 150px;
+    padding-right: 150px;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    margin-bottom: 30px;
+    color: var(--tx1);
+}
+
+.head em{
+    font-size:var(--hed3-size);
+    text-align: center;
+    margin-bottom: 55px;
+    color: var(--tx1);
+}
+
+.head img{
+    width: 80%;
+    margin-bottom: 55px;
+}
+
+#btn-head{
+    width: 18%;
+    height: 50px;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-weight: 900;
+    background-color: #ffffff;
+}
