--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ main{
     justify-content: center;
     align-items: center;
     text-align: center;
-    border:1px solid var(--bggrey);
+    border: 1.5px solid var(--bggrey);
 }
 
 .card-date{
@@ -279,4 +279,51 @@ main{
     font-family: "Source Sans Pro", Helvetica, sans-serif;
     font-weight: 900;
     background-color: #ffffff;
+}
+
+.pages{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.barre{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.number{
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--bggrey);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--hed3-size);
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-weight: 900;
+}
+
+.next{
+    width: 110px;
+    height: 40px;
+    border: 1px solid var(--bggrey);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--hed3-size);
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-weight: 900;
+}
+
+.number:nth-child(1){
+    background-color: var(--bggrey);
+}
+
+.number:nth-child(4){
+    color: var(--bggrey);
 }
