--- a/style.css
+++ b/style.css
@@ -327,3 +327,130 @@ main{
 .number:nth-child(4){
     color: var(--bggrey);
 }
+
+.foot{
+    background-color: var(--bggrey);
+    width: 100%;
+    height: 500px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 30% 20% 20% 30%;
+    grid-template-areas: 
+    "form address"
+    "form phone"
+    "form email"
+    "form social";
+}
+
+.form{
+    grid-area: form;
+}
+
+.address{
+    grid-area: address;
+}
+
+.phone{
+    grid-area: phone;
+}
+
+.email{
+    grid-area: email;
+}
+
+.social{
+    grid-area: social;
+}
+
+.address, .phone, .email, .social{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 2px solid #d8d0d0;
+    border-top: none;
+    padding-left: 30px;
+}
+
+.foot-title{
+    width: 80px;
+    margin-right: 15px;
+}
+
+.foot-title h1{
+    font-size: var(--hed3-size);
+    color: #5a5f64;
+    font-weight: 900;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+}
+
+.foot-content{
+    color: var(--tx4);
+    line-height: 30px;
+    font-size: 12.8;
+    display: flex;
+    flex-direction: row;
+}
+
+.icon{
+    width: 30px;
+    height: 30px;
+    border: 1px solid #d8d0d0;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-control{
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-submit{
+    margin-left: 10%;
+}
+
+.form-control label{
+    font-size: var(--hed3-size);
+    color: #5a5f64;
+    font-weight: 900;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    margin-bottom: 15px;
+}
+
+.form-control input{
+    width: 100%;
+    height: 30px;
+    background-color: var(--bggrey);
+    border: 2px solid #d8d0d0;
+    margin-bottom: 15px;
+}
+
+.form-control textarea{
+    width: 100%;
+    height: 100px;
+    background-color: var(--bggrey);
+    border: 2px solid #d8d0d0;
+    margin-bottom:20px;
+}
+
+.form-btn{
+    width: 35%;
+    height: 40px;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-weight: 900;
+    background-color: var(--bggrey);
+    font-size: var(--hed3-size);
+    color: #5a5f64;
+    border: 2px solid #5a5f64;
+    margin-top: 8px;
+}
